# LightVLM

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  memory.py  pyproject.toml
.github/workflows/: github-actions-demo.yml
core/: config.py  prompt.py
inference/: streamer.py
lightvlm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
models/: audio.py  document_parser.py  generator.py  llm.py  model_router.py
static/: app.js  style.css
templates/: chat.html
tests/: conftest.py  test_imports.py  test_memory.py  test_quality.py  test_speed.py
