[project]
name = "lightvlm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "litellm>=1.35.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "diffusers>=0.27.0",
    "accelerate>=0.28.0",
    "safetensors>=0.4.0",
    "fastembed>=0.3.0",
    "chromadb>=0.5.0",
    "pymupdf>=1.24.0",
    "Pillow>=10.0.0",
    "faster-whisper>=1.0.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"